--- a/ca/templates/ca/base.html
+++ b/ca/templates/ca/base.html
@@ -7,7 +7,7 @@
         <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
         <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
         <script type="text/javascript" src="{% static 'js/jquery-2.0.3.min.js' %}"></script>
-        <title>Ejub! - {% block title%}Edu to Job!{% endblock %}</title>
+        <title>CAML! - {% block title%}Way to Education!{% endblock %}</title>
     </head>
     <body>
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -18,7 +18,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="{% url 'ej:home' %}">Ejub</a>
+                    <a class="brand" href="{% url 'ca:home' %}">CAML</a>
 
                     <div class="nav-collapse collapse">
                         <ul class="nav pull-right">
@@ -49,7 +49,7 @@
         <hr/>
         <footer>
         <div class="container">
-            <p>&copy; Ejub: from education to jobs. Powered by Django</p>
+            <p>&copy; CAML: Your Way to Education. Powered by Django</p>
         </div>
         </footer>
         <script type="text/javascript" src="{% static 'js/jquery-2.0.3.min.js' %}"></script>
