--- a/ca/templates/ca/login.html
+++ b/ca/templates/ca/login.html
@@ -13,7 +13,7 @@
 
     Username: <input type="text" class="input-block-level" placeholder="Username" name="username" value="" size="50" />
     <br/>
-    Password: <input type="text" class="input-block-level" placeholder="Password" name="password" value="" size="50" />
+    Password: <input type="password" class="input-block-level" placeholder="Password" name="password" value="" size="50" />
     <br/>
     <button class="btn btn-primary" type="submit">Login</button>
 </form>
