--- a/ca/templates/ca/base.html
+++ b/ca/templates/ca/base.html
@@ -60,5 +60,6 @@
         </footer>
         <script type="text/javascript" src="{% static 'js/jquery-2.0.3.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/program_search.js' %}"></script>
     </body>
 </html>
