--- a/ca/templates/ca/home.html
+++ b/ca/templates/ca/home.html
@@ -2,13 +2,7 @@
 {% load static %}
 {% block body %}
 <div class="hero-unit">
-    <h1>CA Moonlight</h1>
+    <img src="{{ MEDIA_URL }}logos/moonlight_long.jpg"/>
 </div>
-<div class="container">
-    <legend>Browse Programs</legend>
-    <input type="text" class="input-long search-query" size="50" name="query-program-name" id="query-program-name" placeholder="Search by name"/>
-    <div id="program_suggestions"></div>
-</div>
-
 {% endblock %}
 
